[tool.poetry]
name = "wave-function-collapse-grid-world-maze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
click = "^8.1.3"
requests = "^2.28.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
