[tool.poetry]
name = "wave-function-collapse-grid-world-maze"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
click = "^8.1.3"
requests = "^2.28.1"
loguru = "^0.6.0"
Pillow = "^9.2.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
coverage = "^6.4.4"
coverage-threshold = "^0.4.4"
flake8 = "^5.0.4"
Faker = "^16.6.1"
flake8-annotations-complexity = "^0.0.7"
flake8-blind-except = "^0.2.1"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-docstrings = "^1.6.0"
flake8-comprehensions = "^3.10.0"
flake8-expression-complexity = "^0.0.11"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
flake8-spellcheck = "^0.28.0"
flake8-variables-names = "^0.0.5"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-repeat = "^0.9.1"
vulture = "^2.5"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ["src"]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
precision = 1

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[coverage-threshold]
line_coverage_min = 85
file_line_coverage_min = 85
branch_coverage_min = 50

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv -x -o log_cli=true --cov"
testpaths = [
    ".",
]

[tool.bandit]
exclude_dirs = ["tests", ".github", ".venv", ".vscode", "examples", "output"]

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["main.py", "src"]
sort_by_size = true